--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,5 +46,5 @@ Encoding: UTF-8
 Language: en-US
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2.9000
-URL: https://github.com/noclocks/gmhleasr
+URL: https://github.com/noclocks/gmhleasr, http://docs.noclocks.dev/gmhleasr/
 BugReports: https://github.com/noclocks/gmhleasr/issues
