--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -2,16 +2,17 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [main, master]
+    branches: [main]
   pull_request:
-    branches: [main, master]
+    branches: [main]
+  workflow_dispatch:
 
-name: test-coverage.yaml
+name: Test Coverage
 
 permissions: read-all
 
 jobs:
-  test-coverage:
+  coverage:
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
