--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -3,8 +3,9 @@
 on:
   push:
     paths: ["**.[rR]", "**.[qrR]md", "**.[rR]markdown", "**.[rR]nw", "**.[rR]profile"]
+  workflow_dispatch:
 
-name: style.yaml
+name: Code Style
 
 permissions: read-all
 
