--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,9 @@ Authors@R: c(
   )
 Description: Shiny Dashboard for GMH Communities Leasing Data.
 License: file LICENSE
+URL: https://github.com/noclocks/gmhleasr,
+    https://docs.noclocks.dev/gmhleasr/
+BugReports: https://github.com/noclocks/gmhleasr/issues
 Depends: 
     R (>= 4.1)
 Imports: 
@@ -46,5 +49,3 @@ Encoding: UTF-8
 Language: en-US
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2.9000
-URL: https://github.com/noclocks/gmhleasr, http://docs.noclocks.dev/gmhleasr/
-BugReports: https://github.com/noclocks/gmhleasr/issues
