--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,26 +14,26 @@ URL: https://github.com/noclocks/gmhleasr,
 BugReports: https://github.com/noclocks/gmhleasr/issues
 Depends: 
     R (>= 4.1)
-Imports: 
-    base64enc (>= 0.1.3),
-    bs4Dash (>= 2.3.3),
-    cli (>= 3.6.3),
-    config (>= 0.3.2),
+Imports:
+    base64enc,
+    bs4Dash,
+    cli,
+    config,
     desc,
-    fs (>= 1.6.4),
-    glue (>= 1.7.0),
-    htmltools (>= 0.5.8.1),
-    httr2 (>= 1.0.1),
-    jsonlite (>= 1.8.8),
-    purrr (>= 1.0.2),
-    rlang (>= 1.1.4.9000),
-    shiny (>= 1.8.1.1),
-    shinyjs (>= 2.1.0),
-    shinyWidgets (>= 0.8.6),
-    tibble (>= 3.2.1),
+    fs,
+    glue,
+    htmltools,
+    httr2,
+    jsonlite,
+    purrr,
+    rlang,
+    shiny,
+    shinyjs,
+    shinyWidgets,
+    tibble,
     tools,
     utils,
-    ymlthis (>= 0.1.7)
+    ymlthis
 Suggests: 
     here,
     httptest2,
