--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,24 +15,24 @@ BugReports: https://github.com/noclocks/gmhleasr/issues
 Depends: 
     R (>= 4.1)
 Imports:
-    base64enc,
-    bs4Dash,
     cli,
     config,
     desc,
+    dplyr,
     fs,
     glue,
     htmltools,
     httr2,
     jsonlite,
+    lubridate,
     purrr,
     rlang,
     shiny,
     shinyjs,
-    shinyWidgets,
     tibble,
-    tools,
+    tibblify,
     utils,
+    yaml,
     ymlthis
 Suggests: 
     here,
