--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,21 +3,32 @@
 S3method(trim_ws,character)
 S3method(trim_ws,data.frame)
 S3method(trim_ws,list)
+export(EntrataAPI)
 export(centered)
 export(display_phone_number)
 export(entrata)
 export(entrata_leases)
-export(entrata_properties)
+export(entrata_pre_lease_report)
 export(get_default_method)
+export(get_entrata_report_info)
+export(get_entrata_reports_list)
+export(get_latest_report_version)
+export(get_properties)
+export(get_property_ids_filter_param)
 export(help_label)
 export(help_mark)
 export(make_reactive_trigger)
+export(mem_get_entrata_report_info)
+export(mem_get_entrata_reports_list)
+export(mem_get_latest_report_version)
+export(mem_get_property_ids_filter_param)
 export(parse_entrata_lease_customers)
 export(parse_entrata_lease_intervals)
 export(parse_entrata_lease_scheduled_charges)
 export(parse_entrata_lease_unit_spaces)
 export(parse_entrata_leases)
-export(parse_properties_response)
+export(parse_entrata_properties)
+export(prep_pre_lease_report_params)
 export(req_retry_after)
 export(req_retry_backoff)
 export(req_retry_is_transient)
@@ -31,19 +42,25 @@ export(user_agent)
 export(validate_entrata_config)
 export(validate_entrata_endpoint_method)
 export(validate_entrata_method_params)
+export(validate_entrata_report_name)
 export(verify_css)
 export(view_list)
 importFrom(cli,cli_abort)
+importFrom(cli,cli_alert_danger)
+importFrom(cli,cli_alert_info)
 importFrom(config,get)
 importFrom(desc,desc_get)
+importFrom(dplyr,across)
+importFrom(dplyr,all_of)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
-importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
 importFrom(dplyr,select)
+importFrom(dplyr,transmute)
 importFrom(fs,path_temp)
 importFrom(glue,glue)
 importFrom(htmltools,HTML)
@@ -53,6 +70,7 @@ importFrom(httr2,req_body_json)
 importFrom(httr2,req_headers)
 importFrom(httr2,req_method)
 importFrom(httr2,req_perform)
+importFrom(httr2,req_retry)
 importFrom(httr2,req_url_path_append)
 importFrom(httr2,req_url_query)
 importFrom(httr2,request)
@@ -62,11 +80,20 @@ importFrom(janitor,clean_names)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(listviewer,jsonedit)
+importFrom(lubridate,"%--%")
+importFrom(lubridate,as.duration)
 importFrom(lubridate,parse_date_time)
+importFrom(lubridate,today)
+importFrom(lubridate,ymd)
+importFrom(memoise,memoise)
 importFrom(purrr,compact)
+importFrom(purrr,list_flatten)
+importFrom(purrr,list_rbind)
+importFrom(purrr,map)
 importFrom(purrr,map_dfr)
 importFrom(purrr,pluck)
 importFrom(purrr,pluck_exists)
+importFrom(purrr,set_names)
 importFrom(rlang,.data)
 importFrom(rlang,.env)
 importFrom(rlang,abort)
@@ -77,6 +104,12 @@ importFrom(shinyjs,runjs)
 importFrom(stringr,str_replace)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
+importFrom(tibblify,tib_chr)
+importFrom(tibblify,tib_df)
+importFrom(tibblify,tib_int)
+importFrom(tibblify,tib_lgl)
+importFrom(tibblify,tib_row)
+importFrom(tibblify,tspec_df)
 importFrom(tidyr,unnest)
 importFrom(tidyr,unnest_longer)
 importFrom(utils,URLencode)
