--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(trim_ws,data.frame)
 S3method(trim_ws,list)
 export(EntrataAPI)
 export(centered)
+export(derive_req_body)
 export(display_phone_number)
 export(entrata)
 export(entrata_leases)
