--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,9 +46,14 @@ export(validate_entrata_method_params)
 export(validate_entrata_report_name)
 export(verify_css)
 export(view_list)
+export(write_json_schema)
+export(yaml_to_json)
+export(yaml_to_list)
+importFrom(R6,R6Class)
 importFrom(cli,cli_abort)
 importFrom(cli,cli_alert_danger)
 importFrom(cli,cli_alert_info)
+importFrom(cli,cli_alert_warning)
 importFrom(config,get)
 importFrom(desc,desc_get)
 importFrom(dplyr,across)
@@ -79,6 +84,7 @@ importFrom(httr2,resp_body_json)
 importFrom(httr2,resp_headers)
 importFrom(janitor,clean_names)
 importFrom(jsonlite,fromJSON)
+importFrom(jsonlite,prettify)
 importFrom(jsonlite,toJSON)
 importFrom(listviewer,jsonedit)
 importFrom(lubridate,"%--%")
@@ -119,3 +125,4 @@ importFrom(utils,menu)
 importFrom(utils,packageVersion)
 importFrom(utils,unzip)
 importFrom(yaml,read_yaml)
+importFrom(ymlthis,is_yml)
