--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,10 +19,6 @@ export(get_property_ids_filter_param)
 export(help_label)
 export(help_mark)
 export(make_reactive_trigger)
-export(mem_get_entrata_report_info)
-export(mem_get_entrata_reports_list)
-export(mem_get_latest_report_version)
-export(mem_get_property_ids_filter_param)
 export(parse_entrata_lease_customers)
 export(parse_entrata_lease_intervals)
 export(parse_entrata_lease_scheduled_charges)
@@ -50,6 +46,7 @@ export(write_json_schema)
 export(yaml_to_json)
 export(yaml_to_list)
 importFrom(R6,R6Class)
+importFrom(cachem,cache_mem)
 importFrom(cli,cli_abort)
 importFrom(cli,cli_alert_danger)
 importFrom(cli,cli_alert_info)
@@ -93,6 +90,7 @@ importFrom(lubridate,parse_date_time)
 importFrom(lubridate,today)
 importFrom(lubridate,ymd)
 importFrom(memoise,memoise)
+importFrom(memoise,timeout)
 importFrom(purrr,compact)
 importFrom(purrr,list_flatten)
 importFrom(purrr,list_rbind)
@@ -101,9 +99,12 @@ importFrom(purrr,map_dfr)
 importFrom(purrr,pluck)
 importFrom(purrr,pluck_exists)
 importFrom(purrr,set_names)
+importFrom(purrr,walk)
+importFrom(rlang,"!!")
 importFrom(rlang,.data)
 importFrom(rlang,.env)
 importFrom(rlang,abort)
+importFrom(rlang,ns_env)
 importFrom(shiny,icon)
 importFrom(shiny,isolate)
 importFrom(shiny,reactiveValues)
