--- a/.github/workflows/roxygen.yml
+++ b/.github/workflows/roxygen.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      NOCLOCKS_ENCRYPTION_KEY: ${{ secrets.NOCLOCKS_ENCRYPTION_KEY }}
     permissions:
       contents: write
     steps:
