--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ importFrom(bs4Dash,controlbarItem)
 importFrom(bs4Dash,controlbarMenu)
 importFrom(bs4Dash,menuItem)
 importFrom(bs4Dash,sidebarMenu)
+importFrom(cachem,cache_disk)
 importFrom(cachem,cache_mem)
 importFrom(cli,cli_abort)
 importFrom(cli,cli_alert_info)
@@ -176,6 +177,7 @@ importFrom(shiny,renderText)
 importFrom(shiny,req)
 importFrom(shiny,runApp)
 importFrom(shiny,shinyApp)
+importFrom(shiny,shinyOptions)
 importFrom(shiny,showModal)
 importFrom(shiny,sliderInput)
 importFrom(shiny,tagList)
